--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -60,6 +60,7 @@
     color: $bgColor;
     box-shadow: inset 0 0 0 50px #1A1A1A;
     -webkit-box-shadow: inset 0 0 0 50px #1A1A1A;
+    -webkit-text-fill-color: $bgColor;
 }
 
 .help__input_error, #dark .help__input_error {
