--- a/src/components/PersonalDataInput/PersonalDataInput.scss
+++ b/src/components/PersonalDataInput/PersonalDataInput.scss
@@ -13,6 +13,8 @@
   box-shadow: inset 0 0 0 50px $bgColor;
   -webkit-box-shadow: inset 0 0 0 50px $bgColor;
   -webkit-text-fill-color: #000;
+  appearance: none;
+  -webkit-appearance: none;
 
   &:focus {
     outline: none;
@@ -26,6 +28,8 @@
   box-shadow: inset 0 0 0 50px #1A1A1A;
   -webkit-box-shadow: inset 0 0 0 50px #1A1A1A;
   -webkit-text-fill-color: $bgColor;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .PhoneInputCountry {
