Added -webkit-autofill appearance none

--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -37,6 +37,12 @@
         outline: none;
     }
 }
+
+.help__input:-webkit-autofill {
+    appearance: none;
+    -webkit-appearance: none;
+    border: none;
+}
   
 .help__row .PhoneInputInput {
     font-family: $generalFont;
