--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -43,7 +43,7 @@
 }
 
 .header__logo {
-    width: 199px;
+    width: 284px;
 }
 
 .header__burger {
@@ -91,7 +91,7 @@
         font-size: 16px;
     }
     .header__logo {
-        width: 171px;
+        width: 250px;
     }
 }
 
@@ -101,7 +101,7 @@
     }
 
     .header__logo {
-        width: 120px;
+        width: 179px;
     }
 }
 
@@ -173,10 +173,6 @@
         background-color: $bgColor_dark;
     }
 
-    .header__logo {
-        width: 108px;
-    }
-
     .header__burger {
         display: block;
         width: 30px;
@@ -201,6 +197,13 @@
     #dark .header__closeIcon {
         fill: $textColor_dark;
     }
+}
+
+@media screen and (max-width: $mobile) {
+    .header__logo {
+        width: 108px;
+    }
+
 }
 
 @media (min-width: $ultra)  {
