--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -48,12 +48,12 @@
     color: $textColor_dark;
 }
 
-.footer__link:hover {
+.footer__link:hover, .footer__emailLink:hover, .footer__telLink:hover {
     color: $accentColor;
     transition: color 0.1s ease;
 }
 
-#dark .footer__link:hover {
+#dark .footer__link:hover, #dark .footer__emailLink:hover, #dark .footer__telLink:hover {
     color: $accentColor;
     transition: color 0.1s ease;
 }
