Убрала привела нижний отсуп на странице О проетке к единообразию в фигме

--- a/src/pages/AboutProjectPage/AboutProjectPage.scss
+++ b/src/pages/AboutProjectPage/AboutProjectPage.scss
@@ -18,6 +18,9 @@
         line-height: 27px;
         margin-bottom: 60px;
     }
+    .member {
+        margin-bottom: 0;
+    }
 }
 @media (min-width: $ultra) {
     .about {
