Изменила ораньжевый  цвет как на макете

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -13,7 +13,8 @@ $landscapeSmall: 500px;
 
 /* Colors */
 $bgColor: #ffffff;
-$accentColor: #E88A01;
+/* $accentColor: #E88A01; */
+$accentColor: #E88B00; 
 $greenColor: #3E8F35;
 $greyColor: #F2F2F2;
 $textColor: #000000;
