--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -46,6 +46,7 @@
             transition: color 0.1s ease;
         } 
     }
+    
     &__list-title {
         margin-bottom: 60px;
     }
@@ -57,6 +58,10 @@
             font-size: 22px;
             text-decoration: underline;
         }
+        a:hover {
+            color: $accentColor;
+            transition: color 0.1s ease;
+        } 
     }
     &__list-item {
         margin-left: 140px;
