--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -34,8 +34,12 @@
         text-transform: uppercase;
         margin-bottom: 20px;
     }
+    &__subtitle_lower {
+        text-transform: none;
+    }
     &__text {
         margin-bottom: 60px;
+        
         a {
             display: inline;
             font-size: 22px;
@@ -92,9 +96,15 @@
         h4 {
             padding-bottom: 60px;
         }
+        
+    }
+    &-info__wrapper {
+        p:last-child {
+            margin-bottom: 0;
+        }
     }
     &__items {
-        margin-top: 100px;
+        margin-top: 60px;
     }
     &__item {
         display: flex;
@@ -102,15 +112,15 @@
         width: 100%;
         min-height: 75px;
         padding-bottom: 12px;
-        column-gap: 6%;
+        column-gap: 10%;
     }
     &__title-link {
-        width: 32%;
+        width: 30%;
     }
     &__link {
         display: inline-block;
         word-wrap: break-word;
-        width: 64%;
+        width: 60%;
         font-size: 18px;
         line-height: 22px;
         font-weight: 700;
@@ -136,7 +146,7 @@
         &__subtitle {
             font-size: 48px;
             line-height: 62px;
-            margin-bottom: 80px;
+            margin-bottom: 50px;
         }
         &__text {
             margin-bottom: 100px;
@@ -183,15 +193,20 @@
             }
         }
         &__items {
-            margin-top: 200px;
+            margin-top: 70px;
         }
         &__item {
             align-items: center;
             min-height: 163px;
+            column-gap: 10%;
         }
+        &__title-link {
+            width: 30%;
+        }   
         &__link {
             font-size: 30px;
             line-height: 37px;
+            width: 60%;
         }  
     }
 }
@@ -254,7 +269,7 @@
             padding-bottom: 30px;
         }
         &__items {
-            margin-top: 23px;
+            margin-top: 30px;
         }
         &__item {
             min-height: 42px;
