Inline-block for checkbox and radio in form

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,31 +17,31 @@
   color: $textColor;
 }
 
-.app__chat {
-  position: fixed;
-  z-index: 1000;
-  bottom: 60px;
-  right: 60px;
-  width: 0;
-  border: none;
-  background-color: inherit;
-}
+// .app__chat {
+//   position: fixed;
+//   z-index: 1000;
+//   bottom: 60px;
+//   right: 60px;
+//   width: 0;
+//   border: none;
+//   background-color: inherit;
+// }
 
-.app__chatIcon {
-  position: fixed;
-  z-index: 1000;
-  bottom: 60px;
-  right: 60px;
-  width: 90px;
-}
+// .app__chatIcon {
+//   position: fixed;
+//   z-index: 1000;
+//   bottom: 60px;
+//   right: 60px;
+//   width: 90px;
+// }
 
-.app__chatOnline {
-  position: fixed;
-  z-index: 2000;
-  width: 10px;
-  bottom: 133px;
-  right: 70px;
-}
+// .app__chatOnline {
+//   position: fixed;
+//   z-index: 2000;
+//   width: 10px;
+//   bottom: 133px;
+//   right: 70px;
+// }
 
 .home__page {
   background-image: url(./assets/imgs/background_desktop_comp.png);
@@ -58,61 +58,61 @@
 }
 
 
-@media (max-width: $tablet)  {
-  .app__chatIcon {
-    bottom: 30px;
-    right: 30px;
-    width: 75px;
-  }
+// @media (max-width: $tablet)  {
+//   .app__chatIcon {
+//     bottom: 30px;
+//     right: 30px;
+//     width: 75px;
+//   }
   
-  .app__chatOnline {
-    width: 9px;
-    bottom: 90px;
-    right: 38px;
-  }
-}
+//   .app__chatOnline {
+//     width: 9px;
+//     bottom: 90px;
+//     right: 38px;
+//   }
+// }
 
-@media (max-width: $mobile)  {
-  .app__chatIcon {
-    bottom: 15px;
-    right: 15px;
-    width: 65px;
-  }
+// @media (max-width: $mobile)  {
+//   .app__chatIcon {
+//     bottom: 15px;
+//     right: 15px;
+//     width: 65px;
+//   }
   
-  .app__chatOnline {
-    width: 6px;
-    bottom: 69px;
-    right: 24px;
-  }
-}
+//   .app__chatOnline {
+//     width: 6px;
+//     bottom: 69px;
+//     right: 24px;
+//   }
+// }
 
-@media (min-width: $ultra)  {
-  .app__chatIcon {
-    bottom: 60px;
-    right: 60px;
-    width: 200px;
-  }
+// @media (min-width: $ultra)  {
+//   .app__chatIcon {
+//     bottom: 60px;
+//     right: 60px;
+//     width: 200px;
+//   }
   
-  .app__chatOnline {
-    width: 35px;
-    bottom: 208px;
-    right: 74px;
-  }
-}
+//   .app__chatOnline {
+//     width: 35px;
+//     bottom: 208px;
+//     right: 74px;
+//   }
+// }
 
 
 
-@media screen and (orientation:landscape)
-and (max-width: $landscape) {
-  .app__chatIcon {
-    bottom: 15px;
-    right: 15px;
-    width: 65px;
-  }
+// @media screen and (orientation:landscape)
+// and (max-width: $landscape) {
+//   .app__chatIcon {
+//     bottom: 15px;
+//     right: 15px;
+//     width: 65px;
+//   }
   
-  .app__chatOnline {
-    width: 6px;
-    bottom: 69px;
-    right: 24px;
-  }
-}
+//   .app__chatOnline {
+//     width: 6px;
+//     bottom: 69px;
+//     right: 24px;
+//   }
+// }
