--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -4,6 +4,10 @@
     margin-bottom: 20px;
 }
 
+.radio__inner {
+    display: inline-block;
+}
+
 .radio__input {
     position: absolute;
     z-index: -1;
@@ -17,7 +21,6 @@
     user-select: none;
     font-size: 16px;
     line-height: 14px;
-    // margin-left: 20px;
 }
 
 .radio__label::before {
