Scroll to top after clicking on links in header and footer; reset form state after clicking on form link in header

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -39,6 +39,10 @@
     justify-content:space-between;
 }
 
+.footer__link {
+    cursor: pointer;
+}
+
 .footer__pages {
     display: flex;
     flex-direction: column;
