--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -27,6 +27,7 @@
 }
 
 .header__link {
+    cursor: pointer;
     font-size: 20px;
     &:hover {
         color: $accentColor;
@@ -43,6 +44,7 @@
 }
 
 .header__logo {
+    cursor: pointer;
     width: 284px;
 }
 
