--- a/src/components/SwitchTheme/SwitchTheme.scss
+++ b/src/components/SwitchTheme/SwitchTheme.scss
@@ -4,6 +4,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .switch__label {
