--- a/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
+++ b/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
@@ -5,10 +5,11 @@
     margin-top: 115px;
     margin-bottom: 50px;
     font-size: 22px;
-    line-height: 27px;
+    /* line-height: 27px; */
 
     &__title {
         margin-bottom: 70px;
+
     }
     &__list-title {
         margin-bottom: 49px;
@@ -59,7 +60,7 @@
 @media (max-width: $tablet)  {
     .privacy {
         font-size: 15px;
-        line-height: 18px;
+        /* line-height: 18px; */
         margin-top: 75px;
         margin-bottom: 50px;
         
@@ -96,7 +97,7 @@
 @media (max-width: $mobile)  {
     .privacy {
         font-size: 8px;
-        line-height: 10px;
+        /* line-height: 10px; */
         margin-top: 35px;
         margin-bottom: 30px;
 
