--- a/src/pages/GeneralTermsPage/GeneralTermsPage.scss
+++ b/src/pages/GeneralTermsPage/GeneralTermsPage.scss
@@ -91,3 +91,12 @@
         margin-bottom: 15px;
     }
 }
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (max-height: 600px) {
+    .terms {
+        margin-top: 20px; 
+        &__subtitle {
+            font-size: 24px;
+            line-height: 26px;
+        }
+}
+}
