--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -20,6 +20,7 @@
   grid-auto-flow: column;
   // grid-template-columns: 1fr 20fr;
   user-select: none;
+  cursor: pointer;
 }
 
 .checkbox__input + label::before {
