--- a/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
+++ b/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
@@ -5,15 +5,17 @@
     margin-top: 115px;
     margin-bottom: 50px;
     font-size: 22px;
-    /* line-height: 27px; */
+    line-height: 27px;
 
     &__title {
         margin-bottom: 70px;
-
+        line-height: 1.3;
     }
     &__list-title {
         margin-bottom: 49px;
+        display: inline-block;
     }
+    
     &__list {
         list-style-type: none;
         margin-bottom: 48px;
@@ -60,17 +62,13 @@
 @media (max-width: $tablet)  {
     .privacy {
         font-size: 15px;
-        /* line-height: 18px; */
+        line-height: 18px;
         margin-top: 75px;
         margin-bottom: 50px;
         
         &__title {
             margin-bottom: 40px;
         }
-/* 
-        &__content {
-            padding: 53px 35px 60px 35px;
-        } */
         
         &__list-title {
             margin-bottom: 30px;
@@ -81,7 +79,7 @@
         &__list-item {
             margin-left: 80px;
             &::before {
-                top: 6px;
+                top: 5px;
                 left: -20px;
                 width: 10px;
                 height: 10px;
@@ -97,17 +95,13 @@
 @media (max-width: $mobile)  {
     .privacy {
         font-size: 8px;
-        /* line-height: 10px; */
+        line-height: 10px;
         margin-top: 35px;
         margin-bottom: 30px;
 
         &__title {
             margin-bottom: 30px;
         }
-    
-/*         &__content {
-            padding: 25px 7px 25px 7px;
-        } */
         
         &__list-title {
             margin-bottom: 15px;
@@ -117,7 +111,6 @@
         }
         &__list-item {
             margin-left: 41px;
-
             &::before {
                 top: 3px;
                 left: -12px;
@@ -135,12 +128,12 @@
         margin-top: 20px;
     }
 }
-/* @media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio:0) and (max-height: 600px){ 
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio: 2) and (max-height: 600px){ 
     .privacy {
         &__list-item {
             &::before{
-            top: 12px;
+            top: 10px;
             } 
         } 
     }
-} */
+}
