--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,6 +14,14 @@ body {
   color: $textColor;
   font-weight: 400;
 }
+ol, ul, li {
+  border: 0;
+  vertical-align: baseline;
+} 
+
+ol, ul {
+  list-style: none;
+}
 
 main {
   flex: 1 0 auto;
