Исправила баг маркеров для андройда на странице Политика

--- a/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
+++ b/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
@@ -137,3 +137,12 @@
         } 
     }
 }
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio: 3) and (max-height: 600px){ 
+    .privacy {
+        &__list-item {
+            &::before{
+            top: 5px;
+            } 
+        } 
+    }
+}
