--- a/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
+++ b/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
@@ -47,7 +47,8 @@
         border-bottom: 1px solid #000000;
     }
     .wrapper__img {
-        width: 84%;
+        /* width: 84%; */ //до правок с Яной
+        width: 83%;
         height: 100%;
         background-image: url(../../assets/imgs/screen_desktop.png);
         background-size: 100%;
