--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -36,9 +36,15 @@ main {
 .container__row {
   width: 100%;
   max-width: 1280px;
-  padding-left: 60px;
-  padding-right: 60px;
+  /* padding-left: 60px;
+  padding-right: 60px; */ // отступы до правок дизайна
+  padding-left: 50px; //контейнер 1180
+  padding-right: 50px;
 
+@media (max-width: $tablet)  {
+    padding-left: 67px;
+    padding-right: 67px; //добавила отступы после правок дизайна
+  }
   @media (max-width: $mobile)  {
     padding-left: 20px;
     padding-right: 20px;
@@ -46,8 +52,10 @@ main {
 
   @media (min-width: $ultra)  {
     max-width: 2220px;
-    padding-left: 100px;
-    padding-right: 100px;
+  /*  padding-left: 100px;
+    padding-right: 100px; */ //отступы в проекте до правок дизайна
+    padding-left: 105px;
+    padding-right: 105px;
   }
 }
 
