Изменила фон на мобильном разрешении

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,7 @@
 .home__page {
   background-image: url(./assets/imgs/background_desktop_comp.png);
   background-size: 100%;
+  
   background-repeat: no-repeat;
   background-color: $bgColor;
 
@@ -53,7 +54,9 @@
       background-image: url(./assets/imgs/background_table_comp.png); 
 }
     @media (max-width: $mobile)  {
-      background-image: url(./assets/imgs/background_mobile_comp.png);
+      /* background-image: url(./assets/imgs/background_mobile_comp.png); */
+      background-image: url(./assets/imgs/desktop_320_comp.png);
+      background-position-y: 104px;
 }
 }
 
