--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -45,6 +45,7 @@
     
     &__text {
         margin-bottom: 60px;
+        text-align: left
         
         a {
             display: inline;
@@ -82,13 +83,22 @@
         }
     }
     &__list-item {
-        margin-left: 140px;
+        /* margin-left: 140px; */
+        margin-left: 56px;
+        padding-left: 44px;
+        background-image: url(../../assets/imgs/marker.svg);
+        background-position: 0 0;
+        background-size: 24px 24px;
+        background-repeat: no-repeat;
     }
-    .list-item_circleList {
+    .list_circleNone {
+        li {background-image:none;}
+    }
+    /* .list-item_circleList {
         position: relative;
         @include before_circleList;
         z-index: 1;
-    }
+    } */
     .list-item_bottom {
         padding-bottom: 60px;
     }
@@ -183,16 +193,21 @@
             }
         }
         &__list-item {
-            margin-left: 200px;
+            /* margin-left: 200px; */
+
+            margin-left: 100px;
+            padding-left: 50px;    
+            background-position: 0 10px;
+            background-size: 20px 20px;
         }
-        .list-item_circleList {
+        /* .list-item_circleList {
             &::before {
                 top: 6px;
                 left: -60px;
                 width: 20px;
                 height: 20px;
             }
-        }
+        } */
         .list-item_bottom {
             padding-bottom: 60px;
         }
@@ -211,7 +226,7 @@
             }
         }
         &__items {
-            margin-top: 70px;
+            margin-top: 10px;
         }
         &__item {
             align-items: center;
@@ -224,7 +239,7 @@
         &__link {
             font-size: 30px;
             line-height: 37px;
-            width: 60%;
+            width: 61%;
         }  
     }
 }
@@ -273,16 +288,20 @@
             }
         }
         &__list-item {
-            margin-left: 80px;           
+            /* margin-left: 80px;   */   
+            margin-left: 50px;
+            padding-left: 30px;    
+            background-position: 0 5px;
+            background-size: 10px 10px;   
         }
-        .list-item_circleList {
+        /* .list-item_circleList {
             &::before {
                 top: 6px;
                 left: -20px;
                 width: 10px;
                 height: 10px;
             }
-        }
+        } */
         .list-item_bottom {
             padding-bottom: 30px;
         }
@@ -344,16 +363,20 @@
             }
         }
         &__list-item {
-            margin-left: 41px;
+            /* margin-left: 41px; */
+            margin-left: 28px;
+            padding-left: 11px;    
+            background-position: 0 2px;
+            background-size: 6px 6px;
         }
-        .list-item_circleList {
+        /* .list-item_circleList {
             &::before {
                 top: 3px;
                 left: -12px;
                 width: 6px;
                 height: 6px;
             }
-        }
+        } */
         .list-item_bottom {
             padding-bottom: 15px;
         }
@@ -396,13 +419,20 @@
 @media screen and (orientation:landscape) and (max-width: $horizonMobile) and (max-height: 600px){
     .сookies {
         margin-top: 20px; 
+        
         &__subtitle {
             font-size: 24px;
             line-height: 26px;
         }
+        &__list-item {
+            /* margin-left: 41px; */
+            background-size: 10px 10px;
+            background-position: 0 10px;
+            
+        }
     }
 }
-@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio: 2) and (max-height: 600px){ 
+/* @media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio: 2) and (max-height: 600px){ 
     .сookies {
         .list-item_circleList {
             &::before{
@@ -410,8 +440,8 @@
             } 
         } 
     }
-}
-@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio: 3) and (max-height: 600px){ 
+} */
+/* @media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio: 3) and (max-height: 600px){ 
     .сookies {
         .list-item_circleList{
             &::before{
@@ -419,4 +449,4 @@
             } 
         } 
     }
-}
+} */
