Добавила свойство в общие стили, чтобы предотвратить масштабирование шрифта в альбомной ориентации, разрешив пользователю масштабирование

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,6 +13,7 @@ body {
   background-color: $bgColor;
   color: $textColor;
   font-weight: 400;
+  -webkit-text-size-adjust:none; //Предотвратить масштабирование шрифта в альбомной ориентации, разрешив пользователю масштабирование 
 }
 ol, ul, li {
   border: 0;
