--- a/src/pages/WorkScheme/WorkScheme.scss
+++ b/src/pages/WorkScheme/WorkScheme.scss
@@ -151,7 +151,7 @@
         }
 }
 }
-@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio: 2) and (max-height: 600px){ 
+/* @media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio: 2) and (max-height: 600px){ 
     .scheme {
         &__list-item  {
             &::before{
@@ -168,4 +168,4 @@
             } 
         } 
     }
-}
+} */
