--- a/src/pages/AboutProjectPage/AboutProjectPage.scss
+++ b/src/pages/AboutProjectPage/AboutProjectPage.scss
@@ -1,8 +1,11 @@
 @import "../../styles/vars";
+@import "../../styles/mixin";
 
 .about {
     margin-top: 115px;
     margin-bottom: 50px;
+    font-size: 22px;
+    line-height: 27px;
 
     &__title {
         margin-bottom: 70px;
@@ -14,9 +17,20 @@
         margin-bottom: 15px;
     }
     &__text {
-        font-size: 22px;
-        line-height: 27px;
         margin-bottom: 60px;
+    }
+    &__list {
+        list-style-type: none;
+        margin-bottom: 60px;
+    }
+    &__list-item {
+        position: relative;
+        margin-left: 140px;
+        @include before_circleList;
+        z-index: 1;
+    }
+    .list-item_bottom {
+        padding-bottom: 60px;
     }
     .member {
         margin-bottom: 0;
@@ -27,6 +41,7 @@
         margin-top: 170px;
         margin-bottom: 150px;
         font-size: 30px;
+        line-height: 30px;
         &__title {
             margin-bottom: 150px;
         }
@@ -36,9 +51,19 @@
             margin-bottom: 50px;
         }
         &__text {
-            font-size: 30px;
-            line-height: 30px;
             margin-bottom: 100px;
+        }
+        &__list-item {
+            margin-left: 100px;
+            &::before {
+                top: 10px;
+                left: -60px;
+                width: 20px;
+                height: 20px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 45px;
         }
     }
 }
@@ -46,7 +71,9 @@
 @media (max-width: $tablet)  {
     .about {
         margin-top: 75px;
-        margin-bottom: 50px;      
+        margin-bottom: 50px;  
+        font-size: 15px;
+        line-height: 15px;
         &__title {
             margin-bottom: 40px;
         }
@@ -56,9 +83,22 @@
             margin-bottom: 10px;
         }       
         &__text {
-            font-size: 15px;
-            line-height: 15px;
             margin-bottom: 30px;
+        }
+        &__list {
+            margin-bottom: 20px;
+        }
+        &__list-item {
+            margin-left: 80px;
+            &::before {
+                top: 3px;
+                left: -20px;
+                width: 10px;
+                height: 10px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 30px;
         }
     }
 }
@@ -67,6 +107,8 @@
     .about {
         margin-top: 35px;
         margin-bottom: 30px;
+        font-size: 8px;
+        line-height: 8px;
         &__title {
             margin-bottom: 30px;
         }
@@ -76,9 +118,22 @@
             margin-bottom: 5px;
         }    
         &__text {
-            font-size: 8px;
-            line-height: 8px;
             margin-bottom: 15px;
+        }
+        &__list {
+            margin-bottom: 15px;
+        }
+        &__list-item {
+            margin-left: 41px;
+            &::before {
+                top: 1px;
+                left: -12px;
+                width: 6px;
+                height: 6px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 15px;
         }
     }
 }
