--- a/src/pages/AboutProjectPage/AboutProjectPage.scss
+++ b/src/pages/AboutProjectPage/AboutProjectPage.scss
@@ -4,8 +4,6 @@
 .about {
     margin-top: 115px;
     margin-bottom: 50px;
-    font-size: 22px;
-    line-height: 27px;
 
     &__title {
         margin-bottom: 70px;
@@ -18,10 +16,19 @@
     }
     &__text {
         margin-bottom: 60px;
+        font-size: 22px;
+        line-height: 27px;
+    }
+    &__list-title {
+        margin-bottom: 60px;
+        font-size: 22px;
+        line-height: 27px;
     }
     &__list {
         list-style-type: none;
         margin-bottom: 60px;
+        font-size: 22px;
+        line-height: 27px;
     }
     &__list-item {
         position: relative;
@@ -40,8 +47,7 @@
     .about {
         margin-top: 170px;
         margin-bottom: 150px;
-        font-size: 30px;
-        line-height: 30px;
+        
         &__title {
             margin-bottom: 150px;
         }
@@ -52,6 +58,18 @@
         }
         &__text {
             margin-bottom: 100px;
+            font-size: 30px;
+            line-height: 30px;
+        }
+        &__list-title {
+            margin-bottom: 50px;
+            font-size: 30px;
+            line-height: 30px;
+        }
+        &__list {
+            margin-bottom: 100px;
+            font-size: 30px;
+            line-height: 30px;
         }
         &__list-item {
             margin-left: 100px;
@@ -72,8 +90,7 @@
     .about {
         margin-top: 75px;
         margin-bottom: 50px;  
-        font-size: 15px;
-        line-height: 15px;
+        
         &__title {
             margin-bottom: 40px;
         }
@@ -84,9 +101,18 @@
         }       
         &__text {
             margin-bottom: 30px;
+            font-size: 15px;
+            line-height: 15px;
+        }
+        &__list-title {
+            margin-bottom: 30px;
+            font-size: 15px;
+            line-height: 15px;
         }
         &__list {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            font-size: 15px;
+            line-height: 15px;
         }
         &__list-item {
             margin-left: 80px;
@@ -107,8 +133,7 @@
     .about {
         margin-top: 35px;
         margin-bottom: 30px;
-        font-size: 8px;
-        line-height: 8px;
+        
         &__title {
             margin-bottom: 30px;
         }
@@ -119,9 +144,18 @@
         }    
         &__text {
             margin-bottom: 15px;
+            font-size: 8px;
+            line-height: 8px;
+        }
+        &__list-title {
+            margin-bottom: 15px;
+            font-size: 8px;
+            line-height: 8px;
         }
         &__list {
             margin-bottom: 15px;
+            font-size: 8px;
+            line-height: 8px;
         }
         &__list-item {
             margin-left: 41px;
