--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -83,22 +83,13 @@
         }
     }
     &__list-item {
-        /* margin-left: 140px; */
-        margin-left: 56px;
-        padding-left: 44px;
-        background-image: url(../../assets/imgs/marker.svg);
-        background-position: 0 0;
-        background-size: 24px 24px;
-        background-repeat: no-repeat;
+        margin-left: 140px;
     }
-    .list_circleNone {
-        li {background-image:none;}
-    }
-    /* .list-item_circleList {
+    .list-item_circleList {
         position: relative;
         @include before_circleList;
         z-index: 1;
-    } */
+    }
     .list-item_bottom {
         padding-bottom: 60px;
     }
@@ -193,21 +184,16 @@
             }
         }
         &__list-item {
-            /* margin-left: 200px; */
-
             margin-left: 100px;
-            padding-left: 50px;    
-            background-position: 0 10px;
-            background-size: 20px 20px;
         }
-        /* .list-item_circleList {
+        .list-item_circleList {
             &::before {
-                top: 6px;
+                top: 10px;
                 left: -60px;
                 width: 20px;
                 height: 20px;
             }
-        } */
+        }
         .list-item_bottom {
             padding-bottom: 60px;
         }
@@ -288,20 +274,16 @@
             }
         }
         &__list-item {
-            /* margin-left: 80px;   */   
-            margin-left: 50px;
-            padding-left: 30px;    
-            background-position: 0 5px;
-            background-size: 10px 10px;   
+            margin-left: 80px;     
         }
-        /* .list-item_circleList {
+        .list-item_circleList {
             &::before {
-                top: 6px;
+                top: 5px;
                 left: -20px;
                 width: 10px;
                 height: 10px;
             }
-        } */
+        }
         .list-item_bottom {
             padding-bottom: 30px;
         }
@@ -363,20 +345,16 @@
             }
         }
         &__list-item {
-            /* margin-left: 41px; */
-            margin-left: 28px;
-            padding-left: 11px;    
-            background-position: 0 2px;
-            background-size: 6px 6px;
+            margin-left: 41px;
         }
-        /* .list-item_circleList {
+        .list-item_circleList {
             &::before {
                 top: 3px;
                 left: -12px;
                 width: 6px;
                 height: 6px;
             }
-        } */
+        }
         .list-item_bottom {
             padding-bottom: 15px;
         }
