--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -49,7 +49,7 @@
         
         a {
             display: inline;
-            font-size: 22px;
+            /* font-size: 22px; */
             text-decoration: underline;
         }
         a:hover {
@@ -70,7 +70,7 @@
         margin-bottom: 60px;
         a {
             display: inline;
-            font-size: 22px;
+            /* font-size: 22px; */
             text-decoration: underline;
         }
         a:hover {
@@ -169,9 +169,9 @@
         }
         &__text {
             margin-bottom: 100px;
-            a {
+            /* a {
                 font-size: 30px;
-            }
+            } */
         }
         &__list-title {
             margin-bottom: 50px;
@@ -179,9 +179,9 @@
         &__list {
             list-style-type: none;
             margin-bottom: 65px;
-            a {
+           /*  a {
                 font-size: 30px;
-            }
+            } */
         }
         &__list-item {
             margin-left: 100px;
@@ -246,9 +246,9 @@
         }
         &__text{
             margin-bottom: 30px;
-            a {
+           /*  a {
                 font-size: 15px;
-            }
+            } */
         }
         &__subtitle_h3{
             font-size: 32px;
@@ -269,9 +269,9 @@
         }
         &__list {
             margin-bottom: 30px;
-            a {
+            /* a {
                 font-size: 15px;
-            }
+            } */
         }
         &__list-item {
             margin-left: 80px;     
@@ -317,8 +317,8 @@
 
 @media (max-width: $mobile)  {
     .сookies {
-        font-size: 8px;
-        line-height: 10px;
+        font-size: 10px;
+        line-height: 11px;
         margin-top: 35px;
         margin-bottom: 30px;
         &__title {
@@ -331,25 +331,25 @@
         }
         &__text{
             margin-bottom: 15px;
-            a {
+            /* a {
                 font-size: 8px;
-            }
+            } */
         }
         &__list-title {
-            margin-bottom: 15px;
+            margin-bottom: 5px;
         }
         &__list {
             margin-bottom: 15px;
-            a {
+           /*  a {
                 font-size: 8px;
-            }
+            } */
         }
         &__list-item {
             margin-left: 41px;
         }
         .list-item_circleList {
             &::before {
-                top: 2px;
+                top: 3px;
                 left: -12px;
                 width: 6px;
                 height: 6px;
@@ -364,12 +364,12 @@
             margin-bottom: 15px;
         }
         &__subtitle_h4 {
-            font-size: 8px;
-            line-height: 10px;
+            font-size: 10px;
+            line-height: 12px;
         }
         &-type__wrapper{
             h4 {
-                padding-bottom: 15px;
+                padding-bottom: 5px;
             }
         }
         &__items {
