--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -76,3 +76,23 @@
         background-color: $accentColor;
     }  
 }
+@mixin before_circleListBlack {
+    &::before {
+        margin: 0;
+        padding: 0;
+        border:0;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        display: block;
+        box-sizing: border-box;
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 7px;
+        left: -20px;
+        width: 8px;
+        height: 8px;
+        border-radius: 100%;
+        background-color: #000000;
+    }  
+}
