--- a/src/pages/AboutProjectPage/AboutProjectPage.scss
+++ b/src/pages/AboutProjectPage/AboutProjectPage.scss
@@ -76,15 +76,15 @@
             font-size: 30px;
             line-height: 30px;
         }
-        /* &__list-item {
-            margin-left: 100px;
+        &__list-item {
+            margin-left: 50px;
             &::before {
                 top: 10px;
-                left: -60px;
-                width: 20px;
-                height: 20px;
+                left: -32px;
+                width: 10px;
+                height: 10px;
             }
-        } */
+        }
         /* .list-item_bottom {
             padding-bottom: 45px;
         } */
