Добавила всем элементам в svg в бургер меню оранижевый hover

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -56,9 +56,9 @@
 
 .header__burger {
     display: none;
-    & :hover {
+    &:hover rect {
         fill: $accentColor;
-      }
+    }
 }
 
 .header__overlay {
